# bornrule

./: .gitignore  404.html  CNAME  README.md  README.min.md  index.html  mkdocs.yml  nips.py  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: mkdocs.yml  pytest.yml
bornrule/: __init__.py  born.py
bornrule/sql/: __init__.py  born.py  database.py  postgresql.py  sqlite.py
bornrule/torch/: __init__.py  born.py
docs/: index.md  pytorch.md  sklearn.md  sql.md
nips/: dataset.py  experiment.py  metrics.py  networks.py  scores.py
pytorch/: index.html
results/: 20ng_ablation.csv  20ng_cross_validation.csv  20ng_explanation.csv  20ng_learning_curve.csv  20ng_timing_cpu.csv  20ng_timing_gpu.csv  CIFAR10_learning_curve.csv  FashionMNIST_learning_curve.csv  MNIST_learning_curve.csv  htru2_learning_curve.csv  mnist_timing_cpu.csv  mushroom_learning_curve.csv  r52_explanation.csv  r52_learning_curve.csv  r8_explanation.csv  r8_learning_curve.csv  tic_tac_toe_learning_curve.csv  zoo_explanation.csv  zoo_timing_cpu.csv
sklearn/: index.html
sql/: index.html
tests/: test_newsgroup.py  test_sklearn.py  test_sqlite.py  test_sqlite_indb.py  zoo.csv  zoo.db
