[tool.poetry]
name = "bornrule"
version = "0.1.0"
license = "GPL-3.0-or-later"
description = "Classification with Born's rule."
authors = ["Emanuele Guidotti <emanuele.guidotti@unine.ch>"]
readme = "README.md"
repository = "https://github.com/eguidotti/bornrule"
homepage = "https://eguidotti.github.io/bornrule/"
documentation = "https://eguidotti.github.io/bornrule/"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "*"
scipy = "^1.0"
pandas = "*"
scikit-learn = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
