[tool.poetry]
name = "bornrule"
version = "0.3.0"
license = "GPL-3.0-or-later"
description = "Implements the Born Classifier"
authors = ["Emanuele Guidotti <emanuele.guidotti@usi.ch>"]
readme = "README.min.md"
repository = "https://github.com/eguidotti/bornrule"
documentation = "https://bornrule.eguidotti.com"

[tool.poetry.dependencies]
python = ">=3.6.1"
numpy = ">=1.19.5"
scipy = ">=1.5.4"
pandas = ">=1.1.5"
scikit-learn = ">=0.24.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
